--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.5",
     "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -35,5 +36,10 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
-  }
+  },
+  "description": "Explore the ultimate PAOK Football Club fan website! Discover football stats, shop exclusive merchandise, and browse a vibrant gallery of PAOK, the renowned football club from Thessaloniki, Greece.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
