--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,5 @@
-[build]
-  functions = "netlify/functions"
-
 [[redirects]]
   from = "/.netlify/functions/*"
-  to = "/netlify/functions/:splat"
+  to = "/functions/:splat"
   status = 200
   force = true
