--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
+    "@eslint/js": "^9.23.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint": "^9.23.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
+    "globals": "^15.15.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
+    "typescript-eslint": "^8.28.0",
     "vite": "^5.4.1"
   },
   "description": "Explore the ultimate PAOK Football Club fan website! Discover football stats, shop exclusive merchandise, and browse a vibrant gallery of PAOK, the renowned football club from Thessaloniki, Greece.",
